Fixed phone screen sizes, changed a few fonts, websites.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<!-- <p id="dek">Conference subtitle or theme statement</p> -->
 			<nav>
 				<div class="navbar">
-					&middot; <span class="menu-item"><a href="#call-for-papers">call for papers</a></span>
+					<span class="menu-item"><a href="#call-for-papers">call for papers</a></span>
 				</div>
                 <div class="navbar">
 					<span class="menu-item"><a href="#dates">dates</a></span>
@@ -105,7 +105,7 @@
 			</div>
 		</section>
 		
-		<section id="ocation">
+		<section id="location">
 			<h3>Location</h3>
 			<div class="prose">
 				<p>The workshop will take place exclusively in person in Tromsø, Norway, at UiT - The Arctic University of Norway, on the 27th and 28th of November, 2025. More details will become available closer to the workshop dates.</p>
@@ -116,7 +116,7 @@
     <h3>Organisers</h3>
     <div class="prose">
         <table class="organiser-list">
-            <tr><td>Eirini Apostolopoulou</td>
+            <tr><td><a href="https://en.uit.no/ansatte/eirini.apostolopoulou">Eirini Apostolopoulou</a></td>
             <td>UiT</td></tr>
             
             <tr><td>Jenna Conklin</td>
