fixed Jenna's website

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <tr><td><a href="https://en.uit.no/ansatte/eirini.apostolopoulou">Eirini Apostolopoulou</a></td>
             <td>UiT</td></tr>
             
-            <tr><td>Jenna Conklin</td>
+            <tr><td><a href="https://jennatconklin.weebly.com/">Jenna Conklin</a></td>
             <td>UiT</td></tr>
             
            <tr><td><a href="http://deepthigop.al">Deepthi Gopal</a></td>
