--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<h3>Call for Papers</h3>
 			<div class="prose">
 
-				<p>Virtually all phonological theorizing references phonological typology in some respect. For example, cross-linguistic tendencies are routinely invoked in support of claims about markedness and the constraint set. At the same time, there remain major divides in the field with respect to evidential and explanatory standards. Researchers often operate under distinct formal assumptions about levels of representation, the nature of phonological alternations, and the relationship between phonetics and phonology. A persistent question concerns how well a theory can accommodate only and all the attested patterns: formal accounts often face issues of over-generation or under-generation, and the nature of typological gaps remains elusive.</p>
+				<p>Virtually all phonological theorising references phonological typology in some respect. For example, cross-linguistic tendencies are routinely invoked in support of claims about markedness and the constraint set. At the same time, there remain major divides in the field with respect to evidential and explanatory standards. Researchers often operate under distinct formal assumptions about levels of representation, the nature of phonological alternations, and the relationship between phonetics and phonology. A persistent question concerns how well a theory can accommodate only and all the attested patterns: formal accounts often face issues of over-generation or under-generation, and the nature of typological gaps remains elusive.</p>
                 <p>
  
                 The workshop “Issues in Phonological Typology” seeks to bring together researchers whose work connects phonological theory and phonological typology across a broad range of theoretical, methodological, and empirical domains and approaches. We welcome contributions that:
@@ -62,7 +62,7 @@
 <li>Apply experimental methods such as Artificial Grammar Learning or other laboratory-phonological approaches to typological questions;</li>
 <li>Use novel sources of empirical data beyond traditional descriptive materials;</li>
 <li>Bridge formal and functional approaches; </li>
-<li>Address methodological challenges in establishing and interpreting generalizations across different types of empirical evidence.</li></ol> </p>
+<li>Address methodological challenges in establishing and interpreting generalisations across different types of empirical evidence.</li></ol> </p>
 <p class="alert">We invite submissions for 30-minute oral presentations (followed by 10 minutes of discussion). Abstracts should be no longer than 500 words, including data, figures, and tables, but excluding references. <br> <br> Please submit an anonymous PDF abstract to <a href="mailto:phontyptromso@gmail.com">phontyptromso@gmail.com</a> by 31 August 2025.</p>
 			</div>
 
