added travel information

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 
                         <div class="prose">
-                                				<p><span class='highlight'><img style="width:1.3em; height:1.3em; vertical-align: baseline; padding:0; margin:0;" src='assets/news_icon.png'> &nbsp;<b>Current news: &nbsp;</b></span><span class='interesting'>Abstracts are due on <b>31 August</b>!</span></p>
+                                				<p><span class='highlight'><img style="width:1.3em; height:1.3em; vertical-align: baseline; padding:0; margin:0;" src='assets/news_icon.png'> &nbsp;<b>Current news: &nbsp;</b></span><span class='interesting'>Decisions have been announced!</span></p>
                                                 </div>
             <section id="call-for-papers">
 			<h3>Call for Papers</h3>
@@ -63,7 +63,7 @@
 <li>Use novel sources of empirical data beyond traditional descriptive materials;</li>
 <li>Bridge formal and functional approaches; </li>
 <li>Address methodological challenges in establishing and interpreting generalisations across different types of empirical evidence.</li></ol> </p>
-<p class="alert">We invite submissions for 30-minute oral presentations (followed by 10 minutes of discussion). Abstracts should be no longer than 500 words, including data, figures, and tables, but excluding references. <br> <br> Please submit an anonymous PDF abstract to <a href="mailto:phontyptromso@gmail.com">phontyptromso@gmail.com</a> by 31 August 2025.</p>
+<p class="alert">We invite submissions for 30-minute oral presentations (followed by 10 minutes of discussion). Abstracts should be no longer than 500 words, including data, figures, and tables, but excluding references. <br> <br> <s>Please submit an anonymous PDF abstract to <a href="mailto:phontyptromso@gmail.com">phontyptromso@gmail.com</a> by 31 August 2025.</s></p>
 			</div>
 
             		<section id="dates">
@@ -106,11 +106,20 @@
 		</section>
 		
 		<section id="location">
-			<h3>Location</h3>
+			<h3>Location & travel</h3>
 			<div class="prose">
-				<p>The workshop will take place exclusively in person in Tromsø, Norway, at UiT - The Arctic University of Norway, on the 27th and 28th of November, 2025. More details will become available closer to the workshop dates.</p>
+				<p>The workshop will take place <b>in person</b> in Tromsø, Norway, at UiT - The Arctic University of Norway, on the <span class="interesting">27th and 28th of November, 2025</span>. More details will become available closer to the workshop dates.</p>
+
+				<p>We recommend flying to Tromsø. Domestic flights to Oslo and Bergen are frequent and offer good connection possibilities, but direct international flights are also available from Helsinki, Gdańsk, Vienna, Copenhagen, Zürich, Stockholm, Berlin, Frankfurt, Düsseldorf, Amsterdam, Milan, London, Manchester, and other cities. You can take a look at all the current routes <a href="https://avinor.no/en/airport/tromso-airport/">here</a>. There is no train service to Tromsø, but a long-distance bus connects Tromsø to Narvik (for the Swedish railway connection to Stockholm) or Fauske (for Norwegian rail connections to Trondheim and Oslo).</p>
+				<p>Tromsø airport is 3–5km from the city centre, most hotels, and the university. The airport is connected to the center by bus lines 24, 26, 40, 42. (To find the buses at the airport, exit the terminal, go downstairs to the parking lot, walk towards the main street and cross the road.) Bus tickets can be purchased on the app <i>Svipper</i> (<a href="https://play.google.com/store/apps/details?id=no.trfylke.svipper.production">Android</a>/<a href="https://apps.apple.com/no/app/svipper/id6502283055?l=nb">iPhone</a>), at ticket machines (there is one at the airport, although it might not work with all foreign bank cards), or on board the bus with cash only.</p>
+				<p> Taxi prices from the airport to most destinations in the city centre are around 200–300 NOK; there is a taxi stand at the airport, but you can also book a ride <a href=""https://tromsotaxi.no/en/bestill-taxi/>here with Tromsø Taxi</a>, or use their app.</p>
+				<p>Buses <span class='interesting'>20, 33, 34</span> run to UiT (and several other options, depending on the time of day). Svipper will have up-to-date information, including live route tracking — Google Maps works, but is not as accurate. </p>
+				<p>There is a wide range of hotels in Tromsø. In the city centre, options include <a href="https://www.scandichotels.com/hotels/norway/tromso/scandic-ishavshotel">Scandic Ishavshotel</a>, <a href="https://www.radissonhotels.com/en-us/hotels/radisson-blu-tromso">Radisson Blu</a>, <a href="https://www.strawberryhotels.com/hotels/norway/tromso/clarion-hotel-the-edge/">Clarion The Edge</a>, <a href="https://www.strawberryhotels.com/hotels/norway/tromso/clarion-collection-hotel-aurora/">Clarion Aurora</a>, and <a href="https://www.scandichotels.com/hotels/norway/tromso/scandic-grand-tromso">Scandic Grand Tromsø</a>. If budget is a serious consideration, then we recommend choosing a hotel a little further outside the centre: most areas are well-connected to the campus via public transport (including some in Tromsdalen/on the mainland, and on Kvaløya/the island that 'surrounds' Tromsø itself from the west).
+				</p>
+				<p><a href="https://use.mazemap.com/#v=1&zlevel=NaN&center=18.979231,69.683669&zoom=12.1">MazeMap</a> will direct you around the UiT campus, or you can ask a local.</p>
 			</div>
 		</section>
+
 		
 		<section id="organisers">
     <h3>Organisers</h3>
