--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<span class="menu-item">programme</span>
  				</div>
 				<div class="navbar">
-					<span class="menu-item">registration</span>
+					<span class="menu-item"><a href="#registration">registration</a></span>
 				</div>
 				<div class="navbar">
 					<span class="menu-item"><a href="#speakers">speakers</a></span>
@@ -63,7 +63,7 @@
 <li>Use novel sources of empirical data beyond traditional descriptive materials;</li>
 <li>Bridge formal and functional approaches; </li>
 <li>Address methodological challenges in establishing and interpreting generalisations across different types of empirical evidence.</li></ol> </p>
-<p class="alert">We invite submissions for 30-minute oral presentations (followed by 10 minutes of discussion). Abstracts should be no longer than 500 words, including data, figures, and tables, but excluding references. <br> <br> <s>Please submit an anonymous PDF abstract to <a href="mailto:phontyptromso@gmail.com">phontyptromso@gmail.com</a> by 31 August 2025.</s></p>
+<p><s>We invite submissions for 30-minute oral presentations (followed by 10 minutes of discussion). Abstracts should be no longer than 500 words, including data, figures, and tables, but excluding references.</s> <br> <br> <s>Please submit an anonymous PDF abstract to <a href="mailto:phontyptromso@gmail.com">phontyptromso@gmail.com</a> by 31 August 2025.</s></p>
 			</div>
 
             		<section id="dates">
@@ -85,6 +85,13 @@
             <td>27—28 November 2025</td>
 			</tr>
 		</table>
+			</div>
+		</section>
+
+		<section id="registration">
+			<h3>Registration</h3>
+			<div class="prose">
+                <p><span class="interesting">There will be no fees, but registration is required.</span> A registration form will be available soon. </p>
 			</div>
 		</section>
 		
