registration and draft programme

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<span class="menu-item"><a href="#dates">dates</a></span>
  				</div>
 				<div class="navbar">
-					<span class="menu-item">programme</span>
+					<span class="menu-item"><a href="#programme">programme</a></span>
  				</div>
 				<div class="navbar">
 					<span class="menu-item"><a href="#registration">registration</a></span>
@@ -47,7 +47,7 @@
 			</div>
 
                         <div class="prose">
-                                				<p><span class='highlight'><img style="width:1.3em; height:1.3em; vertical-align: baseline; padding:0; margin:0;" src='assets/news_icon.png'> &nbsp;<b>Current news: &nbsp;</b></span><span class='interesting'>Decisions have been announced!</span></p>
+                                				<p><span class='highlight'><img style="width:1.3em; height:1.3em; vertical-align: baseline; padding:0; margin:0;" src='assets/news_icon.png'> &nbsp;<b>Current news: &nbsp;</b></span><span class='interesting'>Please <a href="#registration">register</a>!</span></p>
                                                 </div>
             <section id="call-for-papers">
 			<h3>Call for Papers</h3>
@@ -88,10 +88,17 @@
 			</div>
 		</section>
 
+		<section id="programme">
+			<h3>Programme</h3>
+			<div class="prose">
+                <p><span class="interesting">The programme for the workshop is now available <a href="programme/programme.pdf">here</a> (draft — subject to minor changes!). </p>
+			</div>
+		</section>
+
 		<section id="registration">
 			<h3>Registration</h3>
 			<div class="prose">
-                <p><span class="interesting">There will be no fees, but registration is required.</span> A registration form will be available soon. </p>
+                <p><span class="interesting">There will be no fees, but registration is required. <b><a href="https://docs.google.com/forms/d/1cXQtMV9yhNZTC7OcXv2Rl7y1oxjNC9GwwH3jfKOLnbI/viewform?edit_requested=true">Please sign up here as soon as possible.</a></b></span></p>
 			</div>
 		</section>
 		
