--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 			<div class="prose">
         <table class="dates">
             <tr>
-			<td>Abstract deadline:</td>
-            <td>31 August 2025</td>
+			<td><s>Abstract deadline:</s></td>
+            <td><s>31 August 2025</s></td>
             </tr>
 
 			<tr>
-            <td>Notifications of acceptance:</td>
-            <td>30 September 2025</td>
+            <td><s>Notifications of acceptance:</s></td>
+            <td><s>30 September 2025</s></td>
 			</tr>
 
 			<tr>
